--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Report Viewer</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.6.0/jszip.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <!-- Add necessary MSA library scripts here -->
-    <script src="https://cdn.biojs.net/biojs-vis-msaview/latest/biojs-vis-msaview.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.biojs.net/biojs-vis-msaview/latest/biojs-vis-msaview.min.css">
+    <link rel="stylesheet" type="text/css" href="https://rawgithub.com/BioComputingUP/ProSeqViewer/master/dist/assets/proseqviewer.css">
+    <script src="https://rawgithub.com/BioComputingUP/ProSeqViewer/master/dist/sqv-bundle.js"></script>
 </head>
 <body>
     <h1>Report Viewer</h1>
