--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
         function handleSearch() {
             const query = document.getElementById('search-box').value.toLowerCase();
+            console.log('Searching for:', query);  // Debugging line
             if (!query) {
                 document.getElementById('report-list').innerHTML = '';
                 return;
@@ -123,6 +124,11 @@
         async function init() {
             await fetchMetadata();
             document.getElementById('search-box').addEventListener('input', handleSearch);
+            document.getElementById('search-box').addEventListener('keydown', function(event) {
+                if (event.key === 'Enter') {
+                    handleSearch();
+                }
+            });
         }
 
         init();
