--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Report Viewer</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.6.0/jszip.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/BioComputingUP/ProSeqViewer/master/dist/assets/proseqviewer.css">
-    <script src="https://raw.githubusercontent.com/BioComputingUP/ProSeqViewer/master/dist/sqv-bundle.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://rawgithub.com/BioComputingUP/ProSeqViewer/master/dist/assets/proseqviewer.css">
+    <script src="https://rawgithub.com/BioComputingUP/ProSeqViewer/master/dist/sqv-bundle.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
