--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         }
 
         async function fetchReportArchive() {
-            const response = await fetch('https://drive.google.com/file/d/1eAB5LPJTd4VkMwBGBT7dSudM4E7IQdKH/view?usp=drive_link');
+            const response = await fetch('https://drive.google.com/uc?export=download&id=1eAB5LPJTd4VkMwBGBT7dSudM4E7IQdKH');
             const arrayBuffer = await response.arrayBuffer();
             return arrayBuffer;
         }
