--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         }
 
         async function fetchReportArchive() {
-            const response = await fetch('https://cors-anywhere.herokuapp.com/https://drive.google.com/uc?export=download&id=1eAB5LPJTd4VkMwBGBT7dSudM4E7IQdKH');
+            const response = await fetch('to:https://www.googleapis.com/drive/v2/files/1eAB5LPJTd4VkMwBGBT7dSudM4E7IQdKH?alt=media&source=downloadUrl');
             const arrayBuffer = await response.arrayBuffer();
             return arrayBuffer;
         }
