--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Report Viewer</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.6.0/jszip.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/BioComputingUP/ProSeqViewer/master/dist/assets/proseqviewer.css">
-    <script src="https://raw.githubusercontent.com/BioComputingUP/ProSeqViewer/master/dist/sqv-bundle.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://rawgithub.com/BioComputingUP/ProSeqViewer/master/dist/assets/proseqviewer.css">
+    <script src="https://rawgithub.com/BioComputingUP/ProSeqViewer/master/dist/sqv-bundle.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -39,7 +39,7 @@
         }
     </style>
 </head>
-<body onload="gapiLoaded()">
+<body>
     <h1>Report Viewer</h1>
     <div id="search-container">
         <p>Type gene names to search for:</p>
@@ -49,84 +49,7 @@
     <div id="report-list"></div>
     <div id="report-content"></div>
 
-    <script src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
-    <script src="https://accounts.google.com/gsi/client" async defer onload="gisLoaded()"></script>
-
     <script>
-        let gapiInited = false;
-        let gisInited = false;
-        let tokenClient;
-
-        const CLIENT_ID = 'YOUR_CLIENT_ID.apps.googleusercontent.com'; // Replace with your client ID
-        const API_KEY = 'YOUR_API_KEY'; // Replace with your API key
-        const SCOPES = 'https://www.googleapis.com/auth/drive.readonly';
-        const DISCOVERY_DOCS = ['https://www.googleapis.com/discovery/v1/apis/drive/v3/rest'];
-
-        function gapiLoaded() {
-            gapi.load('client', initializeGapiClient);
-        }
-
-        async function initializeGapiClient() {
-            await gapi.client.init({
-                apiKey: API_KEY,
-                clientId: CLIENT_ID,
-                discoveryDocs: DISCOVERY_DOCS,
-                scope: SCOPES,
-            });
-            gapiInited = true;
-            maybeEnableButtons();
-        }
-
-        function gisLoaded() {
-            tokenClient = google.accounts.oauth2.initTokenClient({
-                client_id: CLIENT_ID,
-                scope: SCOPES,
-                callback: '', // defined later
-            });
-            gisInited = true;
-            maybeEnableButtons();
-        }
-
-        function maybeEnableButtons() {
-            if (gapiInited && gisInited) {
-                // Enable buttons or functionalities that require API access here
-            }
-        }
-
-        function handleAuthClick() {
-            tokenClient.callback = async (resp) => {
-                if (resp.error !== undefined) {
-                    throw (resp);
-                }
-                // Handle any additional logic after authentication
-            };
-
-            if (gapi.client.getToken() === null) {
-                // Prompt the user to sign in and authorize
-                tokenClient.requestAccessToken({ prompt: 'consent' });
-            } else {
-                // Skip the authorization flow if already signed in
-                tokenClient.requestAccessToken({ prompt: '' });
-            }
-        }
-
-        async function fetchReportArchive() {
-            await handleAuthClick();
-
-            const fileId = '1eAB5LPJTd4VkMwBGBT7dSudM4E7IQdKH';
-            const response = await gapi.client.drive.files.get({
-                fileId: fileId,
-                alt: 'media'
-            });
-
-            if (!response.body) {
-                throw new Error('Failed to fetch file content.');
-            }
-
-            const arrayBuffer = await response.body.arrayBuffer();
-            return arrayBuffer;
-        }
-
         let metadata = [];
 
         async function fetchMetadata() {
@@ -135,12 +58,10 @@
             console.log('Metadata loaded:', metadata);  // Debugging line
         }
 
-        async function fetchReportContent(filename) {
-            const arrayBuffer = await fetchReportArchive();
-            const zip = new JSZip();
-            const content = await zip.loadAsync(arrayBuffer);
-            const fileContent = await content.file(filename).async('string');
-            return fileContent;
+        async function fetchReportArchive() {
+            const response = await fetch('reports.zip');
+            const arrayBuffer = await response.arrayBuffer();
+            return arrayBuffer;
         }
 
         async function displayReport(filename) {
@@ -154,6 +75,14 @@
                 newScript.textContent = script.textContent;
                 document.body.appendChild(newScript);
             }
+        }
+
+        async function fetchReportContent(filename) {
+            const arrayBuffer = await fetchReportArchive();
+            const zip = new JSZip();
+            const content = await zip.loadAsync(arrayBuffer);
+            const fileContent = await content.file(filename).async('string');
+            return fileContent;
         }
 
         function displayReportList(reports) {
