--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
         let metadata = [];
 
         async function fetchMetadata() {
-            const response = await fetch('metadata.json?timestamp=' + new Date().getTime());
+            const response = await fetch('metadata.json');
             metadata = await response.json();
             console.log('Metadata loaded:', metadata);
         }
 
         async function fetchReportContent(url) {
-            const response = await fetch(url);
-            const text = await response.text();
-            return text;
+            const response = await fetch(url, { mode: 'no-cors' });
+            // Without a proxy or proper CORS headers, the response content cannot be accessed
+            return response.text();  // This line will not work in 'no-cors' mode
         }
 
         async function displayReport(url) {
