--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
             cursor: pointer;
             margin-bottom: 5px;
         }
+        iframe {
+            width: 100%;
+            height: 600px; /* Adjust height as needed */
+            border: none;
+        }
     </style>
 </head>
 <body>
@@ -47,7 +52,9 @@
         <div><i>e.g., DDX17 DDX5</i></div>
     </div>
     <div id="report-list"></div>
-    <div id="report-content"></div>
+    <div id="report-content">
+        <iframe id="report-iframe"></iframe>
+    </div>
 
     <script>
         let metadata = [];
@@ -58,16 +65,9 @@
             console.log('Metadata loaded:', metadata);
         }
 
-        async function fetchReportContent(url) {
-            const response = await fetch(url, { mode: 'no-cors' });
-            // Without a proxy or proper CORS headers, the response content cannot be accessed
-            return response.text();  // This line will not work in 'no-cors' mode
-        }
-
-        async function displayReport(url) {
-            document.getElementById('report-content').innerHTML = '<div class="loading">Loading...</div>';
-            const reportContent = await fetchReportContent(url);
-            document.getElementById('report-content').innerHTML = reportContent;
+        function displayReport(url) {
+            const iframe = document.getElementById('report-iframe');
+            iframe.src = url;
         }
 
         function displayReportList(reports) {
@@ -86,7 +86,7 @@
                 const reportItem = document.createElement('div');
                 reportItem.className = 'report-item';
                 reportItem.textContent = report.title;
-                reportItem.onclick = () => displayReport(report.url);
+                reportItem.onclick = () => displayReport(report.webViewLink);
                 reportList.appendChild(reportItem);
             });
         }
