--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Report Viewer</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.6.0/jszip.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://rawgithub.com/BioComputingUP/ProSeqViewer/master/dist/assets/proseqviewer.css">
     <script src="https://rawgithub.com/BioComputingUP/ProSeqViewer/master/dist/sqv-bundle.js"></script>
     <style>
@@ -35,11 +37,6 @@
             cursor: pointer;
             margin-bottom: 5px;
         }
-        iframe {
-            width: 100%;
-            height: 600px; /* Adjust height as needed */
-            border: none;
-        }
     </style>
 </head>
 <body>
@@ -58,18 +55,20 @@
         async function fetchMetadata() {
             const response = await fetch('metadata.json');
             metadata = await response.json();
-            console.log('Metadata loaded:', metadata);
         }
 
         async function fetchAndDisplayReport(url) {
-            try {
-                const response = await fetch(url, { mode: 'no-cors' });
-                const text = await response.text();
-                const reportContent = document.getElementById('report-content');
-                reportContent.innerHTML = text;
-            } catch (error) {
-                console.error('Error fetching the report:', error);
-                document.getElementById('report-content').innerHTML = '<div class="no-results">Failed to load the report</div>';
+            const response = await fetch(url, { mode: 'no-cors' });
+            const text = await response.text();
+            const reportContentDiv = document.getElementById('report-content');
+            reportContentDiv.innerHTML = text;
+
+            // Re-evaluate the scripts in the loaded report content to ensure Plotly and MSA figures render
+            const scripts = reportContentDiv.getElementsByTagName('script');
+            for (const script of scripts) {
+                const newScript = document.createElement('script');
+                newScript.textContent = script.textContent;
+                document.body.appendChild(newScript);
             }
         }
 
@@ -89,22 +88,19 @@
                 const reportItem = document.createElement('div');
                 reportItem.className = 'report-item';
                 reportItem.textContent = report.title;
-                reportItem.onclick = () => fetchAndDisplayReport(report.downloadLink);
+                reportItem.onclick = () => fetchAndDisplayReport(report.url);
                 reportList.appendChild(reportItem);
             });
         }
 
         function handleSearch() {
             const query = document.getElementById('search-box').value.trim().toLowerCase();
-            console.log('Searching for:', query);
             if (!query) {
                 document.getElementById('report-list').innerHTML = '';
                 return;
             }
 
             const queryGenes = query.split(' ').filter(Boolean);
-            console.log('Query genes:', queryGenes);
-
             let matchingReports = [];
 
             if (queryGenes.length === 1) {
@@ -115,8 +111,6 @@
                     return queryGenes.every(gene => reportGenes.includes(gene));
                 });
             }
-
-            console.log('Matching reports:', matchingReports);
 
             displayReportList(matchingReports);
         }
