--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Report Viewer</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.6.0/jszip.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://rawgithub.com/BioComputingUP/ProSeqViewer/master/dist/assets/proseqviewer.css">
     <script src="https://rawgithub.com/BioComputingUP/ProSeqViewer/master/dist/sqv-bundle.js"></script>
     <style>
@@ -20,8 +22,6 @@
             margin-top: 40px;
             border-top: 1px solid #ccc;
             padding-top: 20px;
-            height: 600px;
-            overflow: auto;
         }
         .loading {
             font-style: italic;
@@ -36,11 +36,6 @@
             font-weight: bold;
             cursor: pointer;
             margin-bottom: 5px;
-        }
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
         }
     </style>
 </head>
@@ -60,11 +55,39 @@
         async function fetchMetadata() {
             const response = await fetch('metadata.json');
             metadata = await response.json();
+            console.log('Metadata loaded:', metadata);  // Debugging line
+        }
+
+        async function fetchReportArchive() {
+            const response = await fetch('reports.zip');
+            const arrayBuffer = await response.arrayBuffer();
+            return arrayBuffer;
+        }
+
+        async function displayReport(filename) {
+            document.getElementById('report-content').innerHTML = '<div class="loading">Loading...</div>';
+            const reportContent = await fetchReportContent(filename);
+            document.getElementById('report-content').innerHTML = reportContent;
+            // Re-evaluate the scripts in the loaded report content to ensure Plotly and MSA figures render
+            const scripts = document.getElementById('report-content').getElementsByTagName('script');
+            for (const script of scripts) {
+                const newScript = document.createElement('script');
+                newScript.textContent = script.textContent;
+                document.body.appendChild(newScript);
+            }
+        }
+
+        async function fetchReportContent(filename) {
+            const arrayBuffer = await fetchReportArchive();
+            const zip = new JSZip();
+            const content = await zip.loadAsync(arrayBuffer);
+            const fileContent = await content.file(filename).async('string');
+            return fileContent;
         }
 
         function displayReportList(reports) {
             const reportList = document.getElementById('report-list');
-            reportList.innerHTML = '';
+            reportList.innerHTML = '';  // Clear previous results
 
             if (reports.length === 0) {
                 const noResults = document.createElement('div');
@@ -78,24 +101,22 @@
                 const reportItem = document.createElement('div');
                 reportItem.className = 'report-item';
                 reportItem.textContent = report.title;
-                reportItem.onclick = () => displayReport(report.url);
+                reportItem.onclick = () => displayReport(report.filename);
                 reportList.appendChild(reportItem);
             });
         }
 
-        function displayReport(url) {
-            const reportContentDiv = document.getElementById('report-content');
-            reportContentDiv.innerHTML = `<iframe src="${url}"></iframe>`;
-        }
-
         function handleSearch() {
             const query = document.getElementById('search-box').value.trim().toLowerCase();
+            console.log('Searching for:', query);  // Debugging line
             if (!query) {
                 document.getElementById('report-list').innerHTML = '';
                 return;
             }
 
             const queryGenes = query.split(' ').filter(Boolean);
+            console.log('Query genes:', queryGenes);  // Debugging line
+
             let matchingReports = [];
 
             if (queryGenes.length === 1) {
@@ -106,6 +127,8 @@
                     return queryGenes.every(gene => reportGenes.includes(gene));
                 });
             }
+
+            console.log('Matching reports:', matchingReports);  // Debugging line
 
             displayReportList(matchingReports);
         }
