--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
         let metadata = [];
 
         async function fetchMetadata() {
-            const response = await fetch('metadata.json');
+            const response = await fetch('metadata.json', { cache: 'no-store' });
             metadata = await response.json();
             console.log('Metadata loaded:', metadata);  // Debugging line
         }
 
         async function fetchReportArchive() {
-            const response = await fetch('reports.zip');
+            const response = await fetch('reports.zip', { cache: 'no-store' });
             const arrayBuffer = await response.arrayBuffer();
             return arrayBuffer;
         }
@@ -73,7 +73,7 @@
             for (const script of scripts) {
                 const newScript = document.createElement('script');
                 newScript.textContent = script.textContent;
-                document.body.appendChild(newScript);
+                document.body.appendChild(newScript).parentNode.removeChild(newScript);
             }
         }
 
@@ -106,7 +106,15 @@
             });
         }
 
-        function handleSearch() {
+        function debounce(func, wait) {
+            let timeout;
+            return function(...args) {
+                clearTimeout(timeout);
+                timeout = setTimeout(() => func.apply(this, args), wait);
+            };
+        }
+
+        const handleSearch = debounce(() => {
             const query = document.getElementById('search-box').value.trim().toLowerCase();
             console.log('Searching for:', query);  // Debugging line
             if (!query) {
@@ -131,16 +139,11 @@
             console.log('Matching reports:', matchingReports);  // Debugging line
 
             displayReportList(matchingReports);
-        }
+        }, 300);
 
         async function init() {
             await fetchMetadata();
             document.getElementById('search-box').addEventListener('input', handleSearch);
-            document.getElementById('search-box').addEventListener('keydown', function(event) {
-                if (event.key === 'Enter') {
-                    handleSearch();
-                }
-            });
         }
 
         init();
